WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284507
REGRESSION (
282256@main
): [ macOS wk1 ] storage/indexeddb/objectstore-basics.html is a flaky timeout/crash
https://bugs.webkit.org/show_bug.cgi?id=284507
Summary
REGRESSION (282256@main): [ macOS wk1 ] storage/indexeddb/objectstore-basics....
Karl Rackler
Reported
2024-12-11 20:59:27 PST
Description: storage/indexeddb/objectstore-basics.html The test crashes on macOS debug wk1 and times out on macOS release. I could not bisect to a commit due to the lack of spades in that range; I cannot pinpoint what change could have caused this. Debug
282254@main
--> Passed
282292@main
--> Crashed The commit range is
https://commits.webkit.org/compare/282292@main...282254@main
. I reviewed the changes, and
282256@main
seems most likely due to its changes involving an idbobjectstore test with indexeddb/client. This issue can be reproduced using the command: run-webkit-tests --debug -1 --debug-rwt-logging --iterations 1 --force --no-retry --child-processes 1 --test-list test-list-objectstore-basics.txt History:
https://results.webkit.org/?suite=layout-tests&test=storage%2Findexeddb%2Fobjectstore-basics.html&flavor=wk1
Crash Log: No crash log found. stdout: stderr: ASSERTION FAILED: isMainThread() /System/Volumes/Data/otmp/case-sensitive/od.luxon/lw.luxon/sandbox-0/workspace/OpenSource/Source/WebCore/Modules/indexeddb/client/TransactionOperation.h(72) : void WebCore::IDBClient::TransactionOperation::transitionToComplete(const IDBResultData &, RefPtr<TransactionOperation> &&) No diff for timeout.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-12-11 20:59:39 PST
<
rdar://problem/141334194
>
EWS
Comment 2
2024-12-11 21:12:22 PST
Test gardening commit
287722@main
(91fe2d1bbf21): <
https://commits.webkit.org/287722@main
> Reviewed commits have been landed. Closing PR #37817 and removing active labels.
Sihui Liu
Comment 3
2025-01-16 15:20:38 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39152
EWS
Comment 4
2025-01-17 09:26:36 PST
Committed
289064@main
(0196b5613f25): <
https://commits.webkit.org/289064@main
> Reviewed commits have been landed. Closing PR #39152 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug