REGRESSION (282256@main): [ macOS wk1 ] storage/indexeddb/objectstore-basics.html is a flaky timeout/crash https://bugs.webkit.org/show_bug.cgi?id=284507 rdar://141334194

Reviewed by Chris Dumez.

The test is timed out due to dead lock. In IDBConnectionProxy::abortActivitiesForCurrentThread(),
m_transactionOperationLock is held before TransactionOperation::transitionToComplete(), and transitionToComplete() can
lead to forgetActiveOperations() to be invoked, which also requires the lock.
To fix this, now we ensure m_transactionOperationLock is released before TransactionOperation::transitionToComplete().

The test also crashes at TransactionOperation::transitionToComplete() for failing the main thread assertion. To fix it,
use TransactionOperation::transitionToCompleteOnThisThread() in abortActivitiesForCurrentThread() instead, as it can
be invoked on worker thread.

* LayoutTests/platform/mac-wk1/TestExpectations:
* Source/WebCore/Modules/indexeddb/client/IDBConnectionProxy.cpp:
(WebCore::IDBClient::IDBConnectionProxy::abortActivitiesForCurrentThread):

Canonical link: https://commits.webkit.org/289064@main